Actualizadas las slides para tener el url correcto y a la charla y los archivos estaticos bien linkeados

--- a/rrule-slides.ipynb
+++ b/rrule-slides.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:c3e5005d5babbc9d4251647e5e1d066e7e3d6cfe48565f6233819c401956cd80"
+  "signature": "sha256:592502b73423cd4aa85a8e0d3c4f89be2e3f9759612fe9eac5221237adac5dc1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -127,7 +127,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_daily.png'></center>"
+      "<center><img src='static/img/repeat_daily.png'></center>"
      ]
     },
     {
@@ -146,7 +146,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_weekly.png'></center>"
+      "<center><img src='static/img/repeat_weekly.png'></center>"
      ]
     },
     {
@@ -165,7 +165,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_weekday.png'/></center>"
+      "<center><img src='static/img/repeat_weekday.png'/></center>"
      ]
     },
     {
@@ -184,7 +184,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_m_w_f.png'/></center>"
+      "<center><img src='static/img/repeat_m_w_f.png'/></center>"
      ]
     },
     {
@@ -203,7 +203,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_tu_th.png'></center>"
+      "<center><img src='static/img/repeat_tu_th.png'></center>"
      ]
     },
     {
@@ -222,7 +222,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_monthly.png'/></center>"
+      "<center><img src='static/img/repeat_monthly.png'/></center>"
      ]
     },
     {
@@ -241,7 +241,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_yearly.png'/></center>"
+      "<center><img src='static/img/repeat_yearly.png'/></center>"
      ]
     },
     {
@@ -547,7 +547,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_weekly.png'></center>"
+      "<center><img src='static/img/repeat_weekly.png'></center>"
      ]
     },
     {
@@ -974,7 +974,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/repeat_monthly.png'/></center>"
+      "<center><img src='static/img/repeat_monthly.png'/></center>"
      ]
     },
     {
@@ -1143,7 +1143,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><img src='images/PullingHairOut.jpeg'/></center>\n",
+      "<center><img src='static/img/PullingHairOut.jpeg'/></center>\n",
       "<p><em>Photo Credit: <a href'http://communicatebetterblog.com/2013/03/'>http://communicatebetterblog.com/2013/03/</a></em></p>"
      ]
     },
@@ -2026,7 +2026,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0x9e9348c>"
+        "<dateutil.rrule.rrule at 0x94724ac>"
        ]
       }
      ],
@@ -2112,7 +2112,7 @@
       }
      },
      "source": [
-      "<center><img src='images/repeat_weekly.png'></center>"
+      "<center><img src='static/img/repeat_weekly.png'></center>"
      ]
     },
     {
@@ -2314,7 +2314,7 @@
       }
      },
      "source": [
-      "<center><img src='images/repeat_monthly.png'/></center>"
+      "<center><img src='static/img/repeat_monthly.png'/></center>"
      ]
     },
     {
@@ -2556,7 +2556,7 @@
       }
      },
      "source": [
-      "<center><img src='images/repeat_yearly.png'/></center>"
+      "<center><img src='static/img/repeat_yearly.png'/></center>"
      ]
     },
     {
@@ -2914,7 +2914,7 @@
       "<ul>\n",
       "    <li>La documentaci\u00f3n de dateutil es muy completa, pueden verla en: <a href='https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd'>https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd</a></li>\n",
       "    <li>La especificacion de iCalendar: <a href='ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt'>RFC-2445 (Internet Calendaring and Scheduling Core Object Specification (iCalendar)) ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt</a> tambien es una lectura interesante si quieren saber mas sobre fechas recurrentes</li>\n",
-      "    <li>Estas filminas. Van a estar disponibles en los proximos d\u00edas en alg\u00fan lugar TBD.</li>\n",
+      "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides.html'>http://gbourdin.github.io/charlas/rrule-slides.html</a>.</li>\n",
       "    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme cafe) y puedo tratar de ayudarlos</li>\n",
       "</ul>\n",
       "</p>"
