--- a/rrule-slides.ipynb
+++ b/rrule-slides.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:592502b73423cd4aa85a8e0d3c4f89be2e3f9759612fe9eac5221237adac5dc1"
+  "signature": "sha256:8d0dc3ced44648605384daac367994f32c7f4a14a6489a76c47153bdf07a36a5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -628,7 +628,7 @@
       }
      },
      "source": [
-      "<p>Significa que vamos a necesitar distingir los d\u00edas de la semana, y luego cuando calculemos fechas, poder pedir ese d\u00eda</p>"
+      "<p>Significa que vamos a necesitar distinguir los d\u00edas de la semana, y luego cuando calculemos fechas, poder pedir ese d\u00eda</p>"
      ]
     },
     {
@@ -2915,7 +2915,7 @@
       "    <li>La documentaci\u00f3n de dateutil es muy completa, pueden verla en: <a href='https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd'>https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd</a></li>\n",
       "    <li>La especificacion de iCalendar: <a href='ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt'>RFC-2445 (Internet Calendaring and Scheduling Core Object Specification (iCalendar)) ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt</a> tambien es una lectura interesante si quieren saber mas sobre fechas recurrentes</li>\n",
       "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides.html'>http://gbourdin.github.io/charlas/rrule-slides.html</a>.</li>\n",
-      "    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme cafe) y puedo tratar de ayudarlos</li>\n",
+      "    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme caf\u00e9) y puedo tratar de ayudarlos</li>\n",
       "</ul>\n",
       "</p>"
      ]
