--- a/rrule-slides-lujan.ipynb
+++ b/rrule-slides-lujan.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:8d0dc3ced44648605384daac367994f32c7f4a14a6489a76c47153bdf07a36a5"
+  "signature": "sha256:868b7e9823e6a39f23453bbb6ac05b769f667931436cad15ca5a468c0285723f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,6 +51,97 @@
       }
      },
      "source": [
+      "Disclaimer"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<li>En las filminas hay algo de c\u00f3digo de ejemplo, la idea era que sea simple de entender y r\u00e1pido de leer y no necesariamente <em>perfecto</em> as\u00ed que no se asusten si hay cosas que a los m\u00e1s experimentados les hacen dar ganas de agarrarse la cabeza y gritar \"NOOOO, NUNCA VAS A HACER ESO AS\u00cd, USA UN GENERADOR PAPARULO!\"</li>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<li>Similar a lo anterior, hay una parte donde digo \"```from blah import *```\", esto no se hace pero era m\u00e1s pr\u00e1ctico para lo que vamos a hacer hoy, no me peguen</li>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<li>Por si no lo sab\u00edan: el 1\u00ba de Enero de 1900 fu\u00e9 lunes</li>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<li>No me decido como pronunciar <em>rrule</em>, as\u00ed que no se sorprendan si lo digo de 10 formas diferentes durante la charla</li>\n",
+      "    \n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<li>Como no me anime a estudiar cine, me saco las ganas haciendo estas cosas, y como <strong>expl\u00edcito es mejor que impl\u00edcito</strong> yo les voy a ir avisando en que parte de la pel\u00edcula estamos y como se tienen que sentir en cada momento</li>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Esta es la parte en la que se rien."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<center>Primer Acto</center>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
       "Objetivos de esta charla"
      ]
     },
@@ -61,7 +152,7 @@
       "<ol>\n",
       "<li>Entender la complejidad de dise\u00f1ar algoritmos que computan fechas basadas en reglas de recurrencia</li>\n",
       "<li>Entender como rrule soluciona estos problemas de manera simple e intuitiva a partir de un caso de estudio \"real\"</li>\n",
-      "<li>Explorar algunas de las otras herramientas provistas por la libreria dateutil para solucionar de forma trivial problemas que involucren fechas</li>\n",
+      "<li>Explorar algunas de las otras herramientas provistas por la libreria dateutil para solucionar de forma trivial problemas que involucran fechas</li>\n",
       "</ol>"
      ]
     },
@@ -760,7 +851,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "today = datetime.datetime(2014, 05, 28)\n",
+      "today = datetime.datetime(2014, 9, 17)\n",
       "today.weekday()"
      ],
      "language": "python",
@@ -849,7 +940,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2014-05-29 00:00:00\n"
+        "2014-09-18 00:00:00\n"
        ]
       }
      ],
@@ -948,6 +1039,18 @@
      },
      "source": [
       "<p><strong>\u00c1ntes de escribir mas c\u00f3digo, miremos lo que se viene</strong></p>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<center>Segundo Acto</center>"
      ]
     },
     {
@@ -1145,6 +1248,18 @@
      "source": [
       "<center><img src='static/img/PullingHairOut.jpeg'/></center>\n",
       "<p><em>Photo Credit: <a href'http://communicatebetterblog.com/2013/03/'>http://communicatebetterblog.com/2013/03/</a></em></p>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<center>Tercer Acto</center>"
      ]
     },
     {
@@ -2026,7 +2141,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0x94724ac>"
+        "<dateutil.rrule.rrule at 0xa4071ac>"
        ]
       }
      ],
@@ -2093,55 +2208,10 @@
      ]
     },
     {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "source": [
-      "Recordemos"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "<center><img src='static/img/repeat_weekly.png'></center>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "<p>Esta era mas d\u00edficil, teniamos una lista de d\u00edas en los cuales se iba a repetir la regla</p>"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Recurrencias semanales - Usando rrule"
-     ]
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<p>Esta era mas d\u00edficil, teniamos una lista de d\u00edas en los cuales se iba a repetir la regla</p>\n",
       "<p>Aun asi, vamos a ver que es super sencillo ahora</p>"
      ]
     },
@@ -2303,18 +2373,7 @@
       }
      },
      "source": [
-      "Recordemos"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "fragment"
-      }
-     },
-     "source": [
-      "<center><img src='static/img/repeat_monthly.png'/></center>"
+      "\u00bfCu\u00e1l era el problema?"
      ]
     },
     {
@@ -2330,22 +2389,10 @@
     },
     {
      "cell_type": "heading",
-     "level": 1,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "Recurrencias mensuales - Usando rrule"
-     ]
-    },
-    {
-     "cell_type": "heading",
      "level": 2,
      "metadata": {
       "slideshow": {
-       "slide_type": "-"
+       "slide_type": "fragment"
       }
      },
      "source": [
@@ -2869,7 +2916,7 @@
       }
      },
      "source": [
-      "<li>No es imposible implementar el codigo que solucione este problema con las cosas que trae de f\u00e1brica python. Con un poco de paciencia se hace, despu\u00e9s de todo, dateutil y rrule est\u00e1n escritos en python</li>"
+      "<li>No es imposible implementar el c\u00f3digo que solucione este problema con las cosas que trae de f\u00e1brica python. Con un poco de paciencia se hace, despu\u00e9s de todo, dateutil y rrule est\u00e1n escritos en python</li>"
      ]
     },
     {
@@ -2914,10 +2961,21 @@
       "<ul>\n",
       "    <li>La documentaci\u00f3n de dateutil es muy completa, pueden verla en: <a href='https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd'>https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd</a></li>\n",
       "    <li>La especificacion de iCalendar: <a href='ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt'>RFC-2445 (Internet Calendaring and Scheduling Core Object Specification (iCalendar)) ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt</a> tambien es una lectura interesante si quieren saber mas sobre fechas recurrentes</li>\n",
-      "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides.html'>http://gbourdin.github.io/charlas/rrule-slides.html</a>.</li>\n",
+      "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides-lujan.html'>http://gbourdin.github.io/charlas/rrule-slides-lujan.html</a>.</li>\n",
       "    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme caf\u00e9) y puedo tratar de ayudarlos</li>\n",
       "</ul>\n",
       "</p>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "<center><img src='static/img/lujan_qr.png'/></center>"
      ]
     }
    ],
