--- a/rrule-slides-lujan.ipynb
+++ b/rrule-slides-lujan.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:868b7e9823e6a39f23453bbb6ac05b769f667931436cad15ca5a468c0285723f"
+  "signature": "sha256:118a159a1089d087e68adb3861af3ff0422bf7f11f2f93d3f6bc1ca13ee7f9da"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1413,7 +1413,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "rrule type"
+      "rrule class"
      ]
     },
     {
@@ -1424,7 +1424,7 @@
       }
      },
      "source": [
-      "<p>Es la base de la operaci\u00f3n rrule. Acepta todas las keywords establecidas en el RFC como constructores (excepto <em>byday</em>, que se renombr\u00f3 a </em>byweekday). El prototipo del constructor es:\n",
+      "<p>Es la definici\u00f3n del objeto que computa reglas recurrentes. Su constructor acepta todas las keywords establecidas en el RFC como par\u00e1metros (excepto <em>byday</em>, que se renombr\u00f3 a </em>byweekday). El prototipo del constructor es:\n",
       "<pre>rrule(freq)</pre>\n",
       "Donde freq es uno de los siguientes: YEARLY, MONTHLY, WEEKLY, DAILY, HOURLY, MINUTELY, o SECONDLY.</p>"
      ]
@@ -1446,7 +1446,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "rrule type (constructores)"
+      "rrule class (par\u00e1metros)"
      ]
     },
     {
@@ -1457,7 +1457,7 @@
       }
      },
      "source": [
-      "<p>rrule tambien acepta los siguientes constructores:</p>"
+      "<p>rrule tambien acepta los siguientes par\u00e1metros:</p>"
      ]
     },
     {
@@ -1543,7 +1543,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "rrule type (constructores)"
+      "rrule class (par\u00e1metros)"
      ]
     },
     {
@@ -1609,7 +1609,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "rrule type (constructores)"
+      "rrule class (par\u00e1metros)"
      ]
     },
     {
@@ -2141,7 +2141,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0xa4071ac>"
+        "<dateutil.rrule.rrule at 0x98891ac>"
        ]
       }
      ],
