--- a/rrule-slides-lujan.ipynb
+++ b/rrule-slides-lujan.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:118a159a1089d087e68adb3861af3ff0422bf7f11f2f93d3f6bc1ca13ee7f9da"
+  "signature": "sha256:1d15631c691ec65d49d6b27597df27d46e1732d2fe771588587943f13b541d4c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -624,6 +624,18 @@
       }
      },
      "source": [
+      "<center>Segundo Acto</center>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
       "Recurrencias semanales - Usando \u00fanicamente built-ins"
      ]
     },
@@ -1039,18 +1051,6 @@
      },
      "source": [
       "<p><strong>\u00c1ntes de escribir mas c\u00f3digo, miremos lo que se viene</strong></p>"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "<center>Segundo Acto</center>"
      ]
     },
     {
@@ -2141,7 +2141,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0x98891ac>"
+        "<dateutil.rrule.rrule at 0x8f9018c>"
        ]
       }
      ],
