Actualizadas un poco las slides de la charla

--- a/rrule-slides-pycon.ipynb
+++ b/rrule-slides-pycon.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:1d15631c691ec65d49d6b27597df27d46e1732d2fe771588587943f13b541d4c"
+  "signature": "sha256:c4d3f8dba0d6761676804dc62990edad16c31928e42c63e1674f3c7021543d7b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,6 +40,29 @@
       "<i class=\"icon-github icon\"> [gbourdin](https://github.com/gbourdin)</i>\n",
       "\n",
       "<i class=\"icon-envelope-alt icon\"> <a href=\"mailto:german.bourdin@gmail.com\">german.bourdin@gmail.com</a></i>"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Objetivos de esta charla"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<ol>\n",
+      "<li>Entender la complejidad de dise\u00f1ar algoritmos que computan fechas basadas en reglas de recurrencia</li>\n",
+      "<li>Entender como rrule soluciona estos problemas de manera simple e intuitiva a partir de un caso de estudio \"real\"</li>\n",
+      "<li>Explorar algunas de las otras herramientas provistas por la libreria dateutil para solucionar de forma trivial problemas que involucran fechas</li>\n",
+      "</ol>"
      ]
     },
     {
@@ -131,29 +154,6 @@
      },
      "source": [
       "<center>Primer Acto</center>"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
-     "source": [
-      "Objetivos de esta charla"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<ol>\n",
-      "<li>Entender la complejidad de dise\u00f1ar algoritmos que computan fechas basadas en reglas de recurrencia</li>\n",
-      "<li>Entender como rrule soluciona estos problemas de manera simple e intuitiva a partir de un caso de estudio \"real\"</li>\n",
-      "<li>Explorar algunas de las otras herramientas provistas por la libreria dateutil para solucionar de forma trivial problemas que involucran fechas</li>\n",
-      "</ol>"
      ]
     },
     {
@@ -584,7 +584,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "compute_daily_recurrences(start_date=start_date, repeat_every=28, max_repetitions=12)"
+      "compute_daily_recurrences(start_date=start_date, repeat_every=15, max_repetitions=12)"
      ],
      "language": "python",
      "metadata": {
@@ -598,18 +598,18 @@
        "output_type": "pyout",
        "prompt_number": 6,
        "text": [
-        "[datetime.datetime(1900, 1, 29, 0, 0),\n",
-        " datetime.datetime(1900, 2, 26, 0, 0),\n",
-        " datetime.datetime(1900, 3, 26, 0, 0),\n",
-        " datetime.datetime(1900, 4, 23, 0, 0),\n",
-        " datetime.datetime(1900, 5, 21, 0, 0),\n",
-        " datetime.datetime(1900, 6, 18, 0, 0),\n",
-        " datetime.datetime(1900, 7, 16, 0, 0),\n",
-        " datetime.datetime(1900, 8, 13, 0, 0),\n",
-        " datetime.datetime(1900, 9, 10, 0, 0),\n",
-        " datetime.datetime(1900, 10, 8, 0, 0),\n",
-        " datetime.datetime(1900, 11, 5, 0, 0),\n",
-        " datetime.datetime(1900, 12, 3, 0, 0)]"
+        "[datetime.datetime(1900, 1, 16, 0, 0),\n",
+        " datetime.datetime(1900, 1, 31, 0, 0),\n",
+        " datetime.datetime(1900, 2, 15, 0, 0),\n",
+        " datetime.datetime(1900, 3, 2, 0, 0),\n",
+        " datetime.datetime(1900, 3, 17, 0, 0),\n",
+        " datetime.datetime(1900, 4, 1, 0, 0),\n",
+        " datetime.datetime(1900, 4, 16, 0, 0),\n",
+        " datetime.datetime(1900, 5, 1, 0, 0),\n",
+        " datetime.datetime(1900, 5, 16, 0, 0),\n",
+        " datetime.datetime(1900, 5, 31, 0, 0),\n",
+        " datetime.datetime(1900, 6, 15, 0, 0),\n",
+        " datetime.datetime(1900, 6, 30, 0, 0)]"
        ]
       }
      ],
@@ -766,7 +766,7 @@
       }
      },
      "source": [
-      "<p><strong>datetime</strong> nos deja identificar a que d\u00eda de la semana corresponde una fecha!</p>"
+      "<p><strong>datetime</strong> nos deja identificar que d\u00eda de la semana corresponde a una fecha!</p>"
      ]
     },
     {
@@ -1293,7 +1293,7 @@
       }
      },
      "source": [
-      "1 - Nos pegamos un tiro en la rodilla y zafamos de trabajar por un tiempo. Mientras tanto, alguien con mas barba y/o menos pelo se va a encargar del tema."
+      "1 - Nos pegamos un tiro en la rodilla y zafamos de trabajar por un tiempo. Mientras tanto, alguien con mas <strike>barba y/o menos pelo</strike> experiencia se va a encargar del tema."
      ]
     },
     {
@@ -1809,14 +1809,14 @@
       }
      },
      "source": [
-      "Un evento cada 28 d\u00edas, 6 veces"
+      "Un evento cada 15 d\u00edas, 6 veces"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "list(rrule(DAILY, count=6, dtstart=start_date, interval=28))"
+      "list(rrule(DAILY, count=6, dtstart=start_date, interval=15))"
      ],
      "language": "python",
      "metadata": {
@@ -2141,7 +2141,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0x8f9018c>"
+        "<dateutil.rrule.rrule at 0xa2191ac>"
        ]
       }
      ],
@@ -2961,7 +2961,7 @@
       "<ul>\n",
       "    <li>La documentaci\u00f3n de dateutil es muy completa, pueden verla en: <a href='https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd'>https://labix.org/python-dateutil#head-1f7c5d0c956a96f26aa1de60b861f4d58180c1dd</a></li>\n",
       "    <li>La especificacion de iCalendar: <a href='ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt'>RFC-2445 (Internet Calendaring and Scheduling Core Object Specification (iCalendar)) ftp://ftp.rfc-editor.org/in-notes/rfc2445.txt</a> tambien es una lectura interesante si quieren saber mas sobre fechas recurrentes</li>\n",
-      "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides-lujan.html'>http://gbourdin.github.io/charlas/rrule-slides-lujan.html</a>.</li>\n",
+      "    <li>Estas filminas estan disponibles en <a href='http://gbourdin.github.io/charlas/rrule-slides-lujan.html'>http://gbourdin.github.io/charlas/rrule-slides-pycon.html</a>.</li>\n",
       "    <li>Siempre que quieran pueden pingearme por irc, o mandarme un mail o preguntarme en persona (en cuyo caso deberan traerme caf\u00e9) y puedo tratar de ayudarlos</li>\n",
       "</ul>\n",
       "</p>"
@@ -2975,7 +2975,7 @@
       }
      },
      "source": [
-      "<center><img src='static/img/lujan_qr.png'/></center>"
+      "<center><img src='static/img/pycon_qr.png'/></center>"
      ]
     }
    ],
