--- a/rrule-slides-pycon.ipynb
+++ b/rrule-slides-pycon.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:c4d3f8dba0d6761676804dc62990edad16c31928e42c63e1674f3c7021543d7b"
+  "signature": "sha256:cefb58a96fe3dcddb2570317bb3f3ed94067b49ba8144136bf1c45a579001ac1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1831,11 +1831,11 @@
        "prompt_number": 16,
        "text": [
         "[datetime.datetime(1900, 1, 1, 0, 0),\n",
-        " datetime.datetime(1900, 1, 29, 0, 0),\n",
-        " datetime.datetime(1900, 2, 26, 0, 0),\n",
-        " datetime.datetime(1900, 3, 26, 0, 0),\n",
-        " datetime.datetime(1900, 4, 23, 0, 0),\n",
-        " datetime.datetime(1900, 5, 21, 0, 0)]"
+        " datetime.datetime(1900, 1, 16, 0, 0),\n",
+        " datetime.datetime(1900, 1, 31, 0, 0),\n",
+        " datetime.datetime(1900, 2, 15, 0, 0),\n",
+        " datetime.datetime(1900, 3, 2, 0, 0),\n",
+        " datetime.datetime(1900, 3, 17, 0, 0)]"
        ]
       }
      ],
@@ -2141,7 +2141,7 @@
        "output_type": "pyout",
        "prompt_number": 21,
        "text": [
-        "<dateutil.rrule.rrule at 0xa2191ac>"
+        "<dateutil.rrule.rrule at 0x9dd31ac>"
        ]
       }
      ],
