--- a/rrule-slides-pycon.ipynb
+++ b/rrule-slides-pycon.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:cefb58a96fe3dcddb2570317bb3f3ed94067b49ba8144136bf1c45a579001ac1"
+  "signature": "sha256:5e6ad614b482de13fa4902b021358cfcdfff31dcd516780818e43c451e8ca9fb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,7 +126,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "skip"
       }
      },
      "source": [
@@ -137,7 +137,7 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
-       "slide_type": "fragment"
+       "slide_type": "skip"
       }
      },
      "source": [
