--- a/ml-notebook-to-prod/slides/Machine Learning - Del Notebook a Produccion.ipynb
+++ b/ml-notebook-to-prod/slides/Machine Learning - Del Notebook a Produccion.ipynb
@@ -276,7 +276,7 @@
    "source": [
     "* Es una herramienta de experimentación y exploración\n",
     "* Es documentación\n",
-    "* A veces deja registro de varios experimentos y cosas que en el camino no andaron\n",
+    "* A veces deja registro de varios experimentos y cosas que en el camino no anduvieron\n",
     "* En el mejor de los casos, hace una sola cosa"
    ]
   },
